# ncrs

./: Cargo.toml  README.md
src/: data.rs  fasta.rs  gff.rs  lib.rs
tests/: invalid.gff  valid.fasta  valid.gff
